{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 56,
  "lineage": "437cff4a-6990-cf45-4876-0dcc4fb63f30",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730904690368:internet-gateway/igw-0b49c6d2a33933dea",
            "id": "igw-0b49c6d2a33933dea",
            "owner_id": "730904690368",
            "tags": {
              "name": "terraform-igw"
            },
            "tags_all": {
              "name": "terraform-igw"
            },
            "vpc_id": "vpc-0f651e50969277886"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "terraform-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730904690368:loadbalancer/app/terraform-lb/0178c914821b7a9f",
            "arn_suffix": "app/terraform-lb/0178c914821b7a9f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-lb-1384469634.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:730904690368:loadbalancer/app/terraform-lb/0178c914821b7a9f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06eb57fcea8730668"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02c0640b260bd35e1"
              },
              {
                "subnet_id": "subnet-04ac0dbeaf55c5a48"
              }
            ],
            "subnets": [
              "subnet-02c0640b260bd35e1",
              "subnet-04ac0dbeaf55c5a48"
            ],
            "vpc_id": "vpc-0f651e50969277886",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.terraform-alb-sg",
            "aws_subnet.terraform-subnet1",
            "aws_subnet.terraform-subnet2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730904690368:listener/app/terraform-lb/0178c914821b7a9f/c33c63ec96a97a91",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:730904690368:listener/app/terraform-lb/0178c914821b7a9f/c33c63ec96a97a91",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730904690368:loadbalancer/app/terraform-lb/0178c914821b7a9f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.terraform-lb",
            "aws_security_group.terraform-alb-sg",
            "aws_subnet.terraform-subnet1",
            "aws_subnet.terraform-subnet2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "terraform-lbrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730904690368:targetgroup/terraofrm-alb-tg/08b795b842a9db24",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730904690368:listener-rule/app/terraform-lb/0178c914821b7a9f/c33c63ec96a97a91/72ea0633c7e77a3c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:730904690368:listener-rule/app/terraform-lb/0178c914821b7a9f/c33c63ec96a97a91/72ea0633c7e77a3c",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730904690368:listener/app/terraform-lb/0178c914821b7a9f/c33c63ec96a97a91",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.terraform-lb",
            "aws_lb_listener.http",
            "aws_lb_target_group.terraform-alb-tg",
            "aws_security_group.terraform-alb-sg",
            "aws_subnet.terraform-subnet1",
            "aws_subnet.terraform-subnet2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "terraform-alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730904690368:targetgroup/terraofrm-alb-tg/08b795b842a9db24",
            "arn_suffix": "targetgroup/terraofrm-alb-tg/08b795b842a9db24",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:730904690368:targetgroup/terraofrm-alb-tg/08b795b842a9db24",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraofrm-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f651e50969277886"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730904690368:route-table/rtb-0b205fb7b58de0913",
            "id": "rtb-0b205fb7b58de0913",
            "owner_id": "730904690368",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b49c6d2a33933dea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "terraform-route-table"
            },
            "tags_all": {
              "name": "terraform-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f651e50969277886"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subent1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d463f1ab004d4145",
            "route_table_id": "rtb-0b205fb7b58de0913",
            "subnet_id": "subnet-02c0640b260bd35e1"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.terraform-route-table",
            "aws_subnet.terraform-subnet1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subent2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cf4d4167c3798fb",
            "route_table_id": "rtb-0b205fb7b58de0913",
            "subnet_id": "subnet-04ac0dbeaf55c5a48"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.terraform-route-table",
            "aws_subnet.terraform-subnet2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730904690368:security-group/sg-06eb57fcea8730668",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06eb57fcea8730668",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-alb-sg",
            "name_prefix": "",
            "owner_id": "730904690368",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f651e50969277886"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730904690368:subnet/subnet-02c0640b260bd35e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c0640b260bd35e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730904690368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "terraform-subnet1"
            },
            "tags_all": {
              "name": "terraform-subnet1"
            },
            "vpc_id": "vpc-0f651e50969277886"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730904690368:subnet/subnet-04ac0dbeaf55c5a48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ac0dbeaf55c5a48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730904690368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "terraform-subnet2"
            },
            "tags_all": {
              "name": "terraform-subnet2"
            },
            "vpc_id": "vpc-0f651e50969277886"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730904690368:vpc/vpc-0f651e50969277886",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04e1248c3d2ff60cd",
            "default_route_table_id": "rtb-09ec2f6ba84981917",
            "default_security_group_id": "sg-0898debf0987b290a",
            "dhcp_options_id": "dopt-00f61104e96c16616",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f651e50969277886",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09ec2f6ba84981917",
            "owner_id": "730904690368",
            "tags": {
              "name": "terraform-vpc"
            },
            "tags_all": {
              "name": "terraform-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}